Fix for long title overflow

--- a/webtree/themes/main/css/collapse_files/responsive.css
+++ b/webtree/themes/main/css/collapse_files/responsive.css
@@ -549,7 +549,8 @@ table{
 
 
 #exhibit-item-title-only{
-	white-space:	nowrap;
+	/* Andy removed this because long titles were overflowing: but why was this put in the first place? */
+	/* white-space:	nowrap; */
 }
 
 
